# caveman

./: .gitignore  CLAUDE.md  INSTALL.md  MANIFEST.in  README.md  package.json  pyproject.toml  setup.py
.github/: upstream-versions.json
.github/workflows/: release.yml  upstream-watch.yml
docs/: releasing.md  token-economy.md
python/caveman_agent/: __init__.py  __main__.py  _bootstrap.py  cli.py
scripts/: release-bump.js  upstream-check.js
skills/caveman-prune/: README.md  SKILL.md
skills/caveman-stats/: README.md
src/hooks/: caveman-stats.js  checksums.sha256
src/tools/: caveman-expand.js
tests/: test_caveman_expand.js  test_caveman_stats.js  test_pip_shim.py  test_release_scripts.js
tests/installer/: unit.permissions.test.mjs
